d3 js line chart example

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Hello World!</title>
+    <title>Ecs</title>
     <script>
       delete module.exports
     </script>
