--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/d3js/5.7.0/d3.min.js"></script>
     <script src="./window.js"></script>
+    <script src="findPrimes.js"></script>
 </head>
 
 <body>
