write max temp and time since temperature got this high

--- a/index.html
+++ b/index.html
@@ -13,8 +13,11 @@
 </head>
 
 <body>
-    <div id="field"></div>
     <svg class="line-chart"></svg>
+
+    <p>
+        Max Temp : <span id="max-temp"></span> ( <span id="max-temp-time-update"></span> s )
+    </p>
 </body>
 
 </html>
