--- a/index.html
+++ b/index.html
@@ -24,6 +24,10 @@
             border: 1px solid rgb(190, 190, 190);
             padding: 5px 10px;
         }
+
+        #divMaxTempUpdatesHistory {
+            float: left;
+        }
     </style>
 </head>
 
@@ -34,8 +38,9 @@
         Max Temp : <span id="max-temp"></span> ( <span id="max-temp-time-update"></span> s )
     </p>
 
-    <p>
+    <div id="divMaxTempUpdatesHistory">
         <h3>Max temp updates :</h3>
+
 
         <table id="max-temp-updates-history">
 
@@ -47,8 +52,9 @@
             </thead>
 
         </table>
+    </div>
 
-    </p>
+    <button id="cool-down-button">cool down</button>
 </body>
 
 </html>
