heat up button allows to launch workers again after having eventually stopped them

--- a/index.html
+++ b/index.html
@@ -27,6 +27,13 @@
 
         #divMaxTempUpdatesHistory {
             float: left;
+            width: 400px;
+        }
+
+        button {
+            margin: 10px;
+            width: 100px;
+            padding: 5px;
         }
     </style>
 </head>
@@ -54,7 +61,8 @@
         </table>
     </div>
 
-    <button id="cool-down-button">cool down</button>
+    <button id="heat-up-button">Heat Up</button> <br>
+    <button id="cool-down-button">Cool Down</button>
 </body>
 
 </html>
