compute number of primes found as a benchmark value and display it in a table every minute

--- a/index.html
+++ b/index.html
@@ -30,6 +30,10 @@
             width: 400px;
         }
 
+        #divBenchmarkValues {
+            float: left;
+        }
+
         button {
             margin: 10px;
             width: 100px;
@@ -55,6 +59,23 @@
                 <tr>
                     <th>Last update time (s)</th>
                     <th>Max temperature (°C)</th>
+                </tr>
+            </thead>
+
+        </table>
+    </div>
+
+
+    <div id="divBenchmarkValues">
+
+        <h3>Benchmark values :</h3>
+
+        <table id="benchmarkValues">
+
+            <thead>
+                <tr>
+                    <th>time (m)</th>
+                    <th>value</th>
                 </tr>
             </thead>
 
